--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "probability_fit",
+  "name": "covid19_phase_spaces",
   "version": "0.1.0",
   "private": true,
+  "homepage":"http://AlanPalomino.github.io/covid19_phase_spaces/.",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -19,6 +20,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
