--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "private": true,
   "homepage": "http://AlanPalomino.github.io/covid19_phase_spaces/.",
   "dependencies": {
+    "@amcharts/amcharts4": "^4.9.28",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "chart.js": "^2.9.3",
     "d3": "^5.16.0",
     "faker": "^4.1.0",
     "natives": "^1.1.6",
     "plotly.js": "^1.54.5",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-plotly.js": "^2.4.0",
     "react-scripts": "3.4.1",
