--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "chart.js": "^2.9.3",
+    "create-react-class": "^15.6.3",
     "d3": "^5.16.0",
     "faker": "^4.1.0",
     "natives": "^1.1.6",
